--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- nav section -->
     <header class="navbar-container">
         <nav class="navbar-pill">
-            <div><img src="/picture's/Copy of PROFUNK MEDIA GROUP 1.png" alt="" srcset=""></div>
+            <div><img src="picture's/Copy of PROFUNK MEDIA GROUP 1.png" alt="" srcset=""></div>
             <div class="nav-links">
                 <a href="#">Home</a>
                 <a href="#">About</a>
@@ -30,7 +30,7 @@
             <p>Over 160,000 stunning sound effects (SFX) and over 650 royalty<br>
                 free music tracks free for commercial and non commercial use.</p>
 
-            <button class="btn-explore">Explore <img src="/picture's/Vector.png" alt="" srcset=""> </button>
+            <button class="btn-explore">Explore <img src="picture's/Vector.png" alt="" srcset=""> </button>
         </div>
     </section>
 
@@ -55,7 +55,7 @@
                         <button class="btn-light">Sound Effects</button>
 
                         <button class="btn-light">
-                            <img src="/picture's/preference-vertical.png" alt="">
+                            <img src="picture's/preference-vertical.png" alt="">
                         </button>
 
                         <button class="btn-dark">All Sound Effect</button>
@@ -85,7 +85,7 @@
     <!-- stay section -->
 
     <section style="padding: 20%; display: flex;  justify-content: center; ">
-        <img style="width:150%;" src="/picture's/Frame 2147228529.png" alt="" srcset="">
+        <img style="width:150%;" src="picture's/Frame 2147228529.png" alt="" srcset="">
     </section>
     <!--Java script -->
     <script>
