--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             card.innerHTML = `
 
   <div class="header">
-    <div class="logo"> <image src="/picture's/audio.png"> </div>
+    <div class="logo"> <image src="picture's/audio.png"> </div>
     <div class="title">${item.title}</div>
   </div>
 
@@ -138,9 +138,9 @@
 
   <div class="footer">
 
-    <button class="download"> <image src="/picture's/download-04.png"> </button>
-    <button><image src="/picture's/Frame (2).png"> </button>
-    <button class="info"><image src="/picture's/information-circle (1).png"> </button>
+    <button class="download"> <image src="picture's/download-04.png"> </button>
+    <button><image src="picture's/Frame (2).png"> </button>
+    <button class="info"><image src="picture's/information-circle (1).png"> </button>
 
   </div>
 
